<resources>
    <string name="app_name">MJC SNS</string>
    <string name="app_name_logo">명전대 SNS</string>
    <string name="app_title">명지전문대 SNS</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="ID">ID</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="passwordCondition">비밀번호는 최소 6자, 최대 12자로 입력해 주세요.</string>
    <string name="idCondition">아이디는 최소 4자, 최대 12자로 입력해 주세요.</string>
    <string name="rememberID">아이디 기억하기</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="name">성명</string>
    <string name="birthYMD">생년월일</string>
    <string name="department">학과</string>
    <string name="configureNumber">학번</string>
    <string name="personalInformation"><u>개인정보처리방침</u></string>
    <string name="useTerms"><u>이용약관</u></string>
    <string name="i_accept">에 동의합니다</string>
    <string name="not_accept">동의하지 않음</string>
    <string name="accept">동의</string>
    <string name="sex">성별</string>
    <string name="select">선택</string>
    <string name="registerComplete">가입 완료</string>
    <string name="dateSample">예) 19980223</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="makeNewPost">새 글 작성하기</string>
    <string name="insertContent">내용을 입력해 주세요.</string>
    <string name="content">내용 :</string>
    <string name="title">제목 :</string>
    <string name="serverError">서버에 연결할 수 없습니다.\n인터넷 연결 상태를 확인하고\n다시 시도해주세요!</string>
    <string name="serverError_">서버와의 통신이 원활하지 않습니다.\n인터넷 연결을 확인해주세요.</string>
    <string name="reTry">다시 시도</string>
    <string name="exit">종료</string>
    <string name="condition_id">6자 ~ 12자</string>
    <string name="condition_pw">8자 ~ 12자 (영문 1개 포함)</string>
    <string name="condition_name">예) 함정욱</string>
    <string name="condition_department">예) 소프트웨어콘텐츠과</string>
    <string name="condition_configure">예) 2017662016</string>
    <string name="checkIdRight">중복확인</string>
    <string name="options">옵션</string>
    <string name="star">*</string>
    <string name="essential"> 은 필수 입력 사항입니다.</string>
    <string name="like">좋아요</string>
    <string name="dislike">싫어요</string>
    <string name="addComment">댓글 달기</string>
    <string name="writeComment">댓글을 입력하세요...</string>
    <string name="comment">댓글</string>
    <string name="gae">개</string>
    <string name="send">전송</string>
    <string name="logout">로그아웃</string>
    <string name="memberLeave">회원탈퇴</string>
</resources>
