<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <!--좌측 여백-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <!--컨텐츠 영역-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="vertical">

        <!--필수 입력 사항-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:gravity="right"
                android:text="@string/star"
                android:textColor="@color/customBlue"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:gravity="left"
                android:text="@string/essential"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <!--아이디-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="start">

                <TextView
                    android:layout_marginRight="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginLeft="2dp"
                    android:text="@string/star"
                    android:textColor="@color/customBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/register_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:hint="@string/condition_id"
                android:inputType="text"
                android:textSize="15sp" />

            <Button
                android:id="@+id/checkIdRight"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:background="@color/customBlue"
                android:text="@string/checkIdRight"
                android:textColor="@color/white" />
        </LinearLayout>

        <!--비밀번호-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="start">

                <TextView
                    android:layout_marginRight="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginLeft="2dp"
                    android:text="@string/star"
                    android:textColor="@color/customBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/register_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:hint="@string/condition_pw"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </LinearLayout>

        <!--성명-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="start">

                <TextView
                    android:layout_marginRight="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginLeft="2dp"
                    android:text="@string/star"
                    android:textColor="@color/customBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/register_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:hint="@string/condition_name"
                android:inputType="text"
                android:textSize="15sp" />
        </LinearLayout>

        <!--생년월일-->
        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="start">

                <TextView
                    android:layout_marginRight="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthYMD"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginLeft="2dp"
                    android:text="@string/star"
                    android:textColor="@color/customBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/register_birthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:hint="@string/dateSample"
                android:textSize="15sp" />
            <!--android:focusable="false"-->
            <!--android:clickable="false"-->

            <Button
                android:id="@+id/selectDate"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:background="@color/customBlue"
                android:text="@string/select"
                android:textColor="@color/white" />

        </LinearLayout>

        <!--학과-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="start">

                <TextView
                    android:layout_marginRight="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginLeft="2dp"
                    android:text="@string/star"
                    android:textColor="@color/customBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/register_department"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:hint="@string/condition_department"
                android:inputType="text"
                android:textSize="15sp" />
        </LinearLayout>

        <!--학번-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="start">

                <TextView
                    android:layout_marginRight="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configureNumber"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginLeft="2dp"
                    android:text="@string/star"
                    android:textColor="@color/customBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/register_configureNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:hint="@string/condition_configure"
                android:inputType="number"
                android:textSize="15sp" />
        </LinearLayout>

        <!--이용약관-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/useTermsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/useTerms"
                android:textColor="@color/customBlue"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/i_accept" />

            <CheckBox
                android:id="@+id/useTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--개인정보처리방침-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/personalInformationTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/personalInformation"
                android:textColor="@color/customBlue"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/i_accept" />

            <CheckBox
                android:id="@+id/personalInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--가입 완료 버튼-->
        <Button
            android:id="@+id/complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/customBlue"
            android:text="@string/registerComplete"
            android:textColor="@color/white" />

    </LinearLayout>


    <!--우측 여백-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</LinearLayout>