<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/user" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--제목, 작성시간-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--제목-->
                <TextView
                    android:id="@+id/freeBoard_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="테스트용 제목"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <!--작성시간-->
                <TextView
                    android:id="@+id/freeBoard_writeDayTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="end"
                    android:maxLines="1"
                    android:text="2017년 11월 22일 19시 23분"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <!--작성자-->
            <TextView
                android:id="@+id/freeBoard_writer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="skykallove"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <!--내용-->
    <TextView
        android:id="@+id/freeBoard_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="asdfasdfasdfas\ndfa\nsd\nfa\nsdfasfasdfasfasdfafd"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <!--좋아요 / 싫어요 / 댓글 수-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <!--좋아요, 싫어요-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--좋아요-->
            <ImageView
                android:id="@+id/likeButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/like" />

            <TextView
                android:id="@+id/freeBoard_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:maxLines="1"
                android:text="3"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"></LinearLayout>

            <!--싫어요-->
            <ImageView
                android:id="@+id/dislikeButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/dislike" />

            <TextView
                android:id="@+id/freeBoard_dislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:maxLines="1"
                android:text="3"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <!--댓글수-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/freeBoard_commentCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gae"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <!--선-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/lightGray" />

    <!--버튼-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--좋아요 버튼-->
        <Button
            android:id="@+id/list_likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/like"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <!--선-->
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/vertical_bar" />

        <!--싫어요 버튼-->
        <Button
            android:id="@+id/list_dislikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/dislike"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <!--선-->
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/vertical_bar" />

        <!--댓글 달기 버튼-->
        <Button
            android:id="@+id/list_writeCommentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/addComment"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/freeBoard_postNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:textSize="0sp" />

</LinearLayout>